# ovpn-id-password-plugin

./: .gitignore  entry.sh  pyproject.toml
ovpn_idpass_plugin/: __main__.py
ovpn_idpass_plugin/adapter/: sqlite.py
ovpn_idpass_plugin/entity/: db.py  user.py
ovpn_idpass_plugin/usecase/: auth.py  user.py
