[tool.poetry]
name = "ovpn-id-password-plugin"
version = "0.1.0"
description = ""
authors = ["kakka3510 <ryohei06143510@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.39"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
